# AR-DiT

./: .gitignore  README.md  pyproject.toml  sample.py  train.py
configs/: __init__.py  schema.py
configs/model/: ar_dit_s2_cifar.yaml  ar_dit_xl2_cifar.yaml  dit_s2_cifar.yaml  dit_xl2_cifar.yaml
configs/sample/: cifar10_ar_dit_sample.yaml  cifar10_sample.yaml
configs/train/: cifar10_ar_dit_train.yaml  cifar10_train.yaml
data/: __init__.py  cifar10.py
doc/: AR_DiT.md  DiT.md  FlowMatching.md  Plan.md  Test.md  Train.md
eval/: __init__.py  fid.py  inception_score.py
flow/: __init__.py  cfg.py  ema.py  interpolant.py  loss.py  sampler.py
models/: __init__.py  ar_dit.py  dit.py
runtime/: __init__.py  checkpoint.py  dist_utils.py  fid_cache.py  git.py  rng.py
scripts/: eval_checkpoint.sh  remote_train_ar_dit_xl_cifar10.sh  remote_train_dit_xl_cifar10.sh  sample_cifar10.sh  train_cifar10.sh
secrets/: .gitkeep
tests/: conftest.py  test_ar_dit.py  test_components.py  test_configs.py  test_dataset.py  test_dit.py  test_eval.py  test_flow.py  test_overfit.py  test_sample_smoke.py  test_train_smoke.py  test_train_validation_multirank.py
tests/fixtures/images/: make_fixtures.py
